--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,6 +3,14 @@ c3p0.datasource.jdbcUrl=jdbc:mysql://localhost:3306/ext_upload_files?serverTimez
 c3p0.datasource.minPoolSize=3
 c3p0.datasource.maxPoolSize=100
 c3p0.datasource.initialPoolSize=3
+
+
+#spring.datasource.test1.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
+#spring.datasource.test1.jdbc-url=jdbc:sqlserver://localhost:1433;DatabaseName=ajax
+#spring.datasource.test1.username=sherry
+#spring.datasource.test1.password=xiaoai
+
+
 server.servlet.session.timeout=7200
 
 spring.profiles.active=dev
