设计部开发前提交

--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,3 +1,3 @@
 spring.servlet.multipart.location=/opt/ftpserver/
 c3p0.datasource.user=root
-c3p0.datasource.password=root
+c3p0.datasource.password=root123.
