设计部开发半途提交

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,3 +1,7 @@
-c3p0.datasource.user=root
-c3p0.datasource.password=root
+spring.datasource.test1.username=root
+spring.datasource.test1.password=root
+
+spring.datasource.test2.username=cosun
+spring.datasource.test2.password=cosun&2004
+
 spring.servlet.multipart.location=E:/ftpserver/
