--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,3 +1,8 @@
 spring.servlet.multipart.location=/opt/ftpserver/
-c3p0.datasource.user=root
-c3p0.datasource.password=root123.
+
+
+spring.datasource.test1.user=root
+spring.datasource.test1.password=root123.
+
+spring.datasource.test2.user=cosun
+spring.datasource.test2.password=cosun&2004
