--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,14 +1,15 @@
-c3p0.datasource.driverClass=com.mysql.cj.jdbc.Driver
-c3p0.datasource.jdbcUrl=jdbc:mysql://localhost:3306/ext_upload_files?serverTimezone=Asia/Shanghai&useUnicode=true&characterEncoding=utf8&zeroDateTimeBehavior=convertToNull&useSSL=false
-c3p0.datasource.minPoolSize=3
-c3p0.datasource.maxPoolSize=100
-c3p0.datasource.initialPoolSize=3
+spring.datasource.test1.driver-class-name=com.mysql.jdbc.Driver
+spring.datasource.test1.jdbc-url=jdbc:mysql://localhost:3306/ext_upload_files?serverTimezone=Asia/Shanghai&useUnicode=true&characterEncoding=utf8&zeroDateTimeBehavior=convertToNull&useSSL=false
+spring.datasource.test1.minPoolSize=3
+spring.datasource.test1.maxPoolSize=100
+spring.datasource.test1.initialPoolSize=3
 
 
-#spring.datasource.test1.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
-#spring.datasource.test1.jdbc-url=jdbc:sqlserver://localhost:1433;DatabaseName=ajax
-#spring.datasource.test1.username=sherry
-#spring.datasource.test1.password=xiaoai
+spring.datasource.test2.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
+spring.datasource.test2.jdbc-url=jdbc:sqlserver://192.168.0.5:1433;DatabaseName=AIS20190910163600
+spring.datasource.test2.minPoolSize=3
+spring.datasource.test2.maxPoolSize=100
+spring.datasource.test2.initialPoolSize=3 
 
 
 server.servlet.session.timeout=7200
