所有项目完成提交----------------------------------------------------

--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,8 +1,9 @@
 spring.servlet.multipart.location=/opt/ftpserver/
 
 
-spring.datasource.test1.user=root
+spring.datasource.test1.username=root
 spring.datasource.test1.password=root123.
 
-spring.datasource.test2.user=cosun
+spring.datasource.test2.username=cosun
 spring.datasource.test2.password=cosun&2004
+
