--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,12 +9,13 @@ spring.datasource.test2.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServer
 spring.datasource.test2.jdbc-url=jdbc:sqlserver://192.168.0.5:1433;DatabaseName=AIS20190910163600
 spring.datasource.test2.minPoolSize=3
 spring.datasource.test2.maxPoolSize=100
-spring.datasource.test2.initialPoolSize=3 
+spring.datasource.test2.initialPoolSize=3
 
 
 server.servlet.session.timeout=7200
 
-spring.profiles.active=dev
+spring.profiles.active=test
+
 
 #spring.datasource.name=test
 #spring.datasocurce.driver-class-name=com.mysql.cj.  jdbc.Driver
