--- a/src/main/resources/application-test.properties
+++ b/src/main/resources/application-test.properties
@@ -1,6 +1,6 @@
 spring.servlet.multipart.location=/opt/ftpserver/
-spring.datasource.test1.user=aueiny
+spring.datasource.test1.username=aueiny
 spring.datasource.test1.password=Aueiny%123456
 
-spring.datasource.test2.user=cosun
+spring.datasource.test2.username=cosun
 spring.datasource.test2.password=cosun&2004
