所有项目完成提交2----------------------------------------------------

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,7 +14,7 @@ spring.datasource.test2.initialPoolSize=3
 
 server.servlet.session.timeout=7200
 
-spring.profiles.active=test
+spring.profiles.active=dev
 
 
 #spring.datasource.name=test
